refactor: like/bookmark api for post
